# slideflip

./: .env.example  .gitignore  BACKEND_SYSTEM_ARCHITECTURE.md  FLOWS_SETUP.md  FRONTEND_INTEGRATION_README.md  FRONTEND_README.md  MICROSOFT_OAUTH_SETUP.md  MIGRATION_COMPLETE_SUMMARY.md  README.md  WEBSOCKET_MIGRATION_GUIDE.md  YC_PITCH_SCRIPT.md  basic-clean.pptx  check-auth-config.sql  check-email-exists.sql  check-signup-errors.sql  debug-auth-issue.sql  debug-auth-simple.sql  next.config.ts  package-lock.json  package.json  pptxgenjs-docs.md  start-app-robust.sh  tailwind.config.ts  test-anthropic.js  test-complete-migration.js
backend/: .dockerignore  .env.example  AI_SYSTEM_ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  BACKEND_REWRITE_SUMMARY.md  CONTENT_STORAGE_README.md  Dockerfile  Dockerfile.supervisor  FRONTEND_INTEGRATION.md  HTML_FEATURES_README.md  IMPLEMENTATION_SUMMARY.md  LOGGING_OPTIMIZATION.md  PROMPT_RESTRUCTURING_SUMMARY.md  README.md  SLIDE_GENERATION_README.md  cloudbuild.yaml  docker-compose.yml  frontend_client_example.html  main.py  pyproject.toml  requirements.txt  run_persistent.sh  setup_env.py  start.py  stop_backend.sh  supervisord.conf  test_backend.py  test_complete_workflow_with_fixed_templates.py  test_comprehensive_html.py  test_content_creator_agent.py  test_content_storage.py  test_improved_websocket.py  test_kg.py  test_slide_generation.py  test_websocket_kg.py  test_websocket_kg_multi.py
backend/src/: __init__.py
backend/src/agents/: __init__.py  base_agent.py  content_creator_agent.py  web_research_agent.py
backend/src/api/: kg_debug_endpoints.py
backend/src/core/: __init__.py  config.py  improved_websocket_manager.py  initialization.py  logger.py  logging_config.py  monitoring.py  prompt_manager.py  service_orchestrator.py  service_registry.py  simple_prompt_manager.py  websocket_manager.py
backend/src/handlers/: __init__.py  file_handler.py  kg_message_handlers.py  slide_handler.py
backend/src/models/: __init__.py  message_models.py  websocket_messages.py
backend/src/prompts/: __init__.py  prompt_loader.py
backend/src/routers/: __init__.py  api.py  debug.py  improved_websocket.py  monitoring.py  root.py  websocket.py
backend/src/services/: __init__.py  agentic_research_service.py  ai_service.py  (+14 more)
backend/tests/: README.md  run_llm_tests.py  run_tests.py  test_consolidated_slide_generation.py  test_env_setup.py  test_existing_html_files.py  test_html_parsing.py  test_html_parsing_and_llm.py  test_image_extraction.py  test_llm_integration.py  test_llm_slide_generation.py  test_new_slide_generation.py  test_results_html_parsing_llm.json  test_results_llm_generation.json
(+203 files in other folders)
