[project]
name = "backend"
version = "0.1.0"
description = "SlideFlip Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "python-multipart",
    "aiofiles",
    "python-dotenv",
    "pydantic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-socketio",
    "aiohttp",
    "asyncio-mqtt",
    "beautifulsoup4",
    "openai",
    "python-pptx",
    "Pillow",
    "networkx",
    "scikit-learn",
    "numpy",
    "transformers",
    "pydantic-settings>=2.10.1",
    "tiktoken>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
